--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -76,6 +76,7 @@
         <div class="panel-heading m-3">
           <h3 class="page-header">自己紹介</h3>
           <p class="page-subtitle">
+            <%= @profile.intro %>
           </p>
         </div>
       </div>
