--- a/app/views/profiles/follower.html.erb
+++ b/app/views/profiles/follower.html.erb
@@ -1,1 +1,1 @@
-<%= render "profiles/page", content:@follower, pagenate:@pagenate,name: "フォロワー" %>
+<%= render "profiles/page",user:@user, content:@follower, pagenate:@pagenate, name: "フォロワー" %>
