--- a/app/views/profiles/friends.html.erb
+++ b/app/views/profiles/friends.html.erb
@@ -1,1 +1,1 @@
-<%= render "profiles/page", content:@friends, pagenate:@pagenate, name: "友達" %>
+<%= render "profiles/page", user:@user, content:@friends, pagenate:@pagenate, name: "友達" %>
