--- a/app/views/profiles/follow.html.erb
+++ b/app/views/profiles/follow.html.erb
@@ -1,1 +1,1 @@
-<%= render "profiles/page", content:@following, pagenate:@pagenate,name: "フォロー" %>
+<%= render "profiles/page", user:@user, content:@following, pagenate:@pagenate,name: "フォロー" %>
