--- a/app/views/profiles/pickup.html.erb
+++ b/app/views/profiles/pickup.html.erb
@@ -1,1 +1,1 @@
-<%= render "profiles/page", content:@users, pagenate:@pagenate, name: "おすすめ" %>
+<%= render "profiles/page", user:@user, content:@users, pagenate:@pagenate, name: "おすすめ" %>
