画像追加したよ

--- a/app/views/pages/tutorial.html.erb
+++ b/app/views/pages/tutorial.html.erb
@@ -1,1 +1,38 @@
+<div id="carouselExampleIndicators" class="carousel carousel-dark slide position-absolute top-50 start-50 translate-middle" data-bs-ride="carousel" data-bs-interval="false">
 
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+  </div>
+  <div class="carousel-inner">
+
+    <div class="carousel-item active" style="width: 1300px;">
+      <h5 class="text-center">タグを追加しよう！</h5>
+      <%= image_tag("tutorial1.png", class: "w-100") %>
+    </div>
+    <div class="carousel-item" style="width: 1300px;">
+      <h5 class="text-center">おすすめユーザーをフォローしよう！</h5>
+      <%= image_tag("tutorial2.png", class: "w-100") %>
+      <div class="carousel-caption d-none d-md-block">
+      </div>
+    </div>
+    <div class="carousel-item" style="width: 1300px;">
+      <h5 class="text-center">タイムラインを投稿してみんなとその日の出来事を共有しよう！</h5>
+      <%= image_tag("tutorial3.png", class: "w-100") %>
+    </div>
+    <div class="carousel-item" style="width: 1300px;">
+      <h5 class="text-center">コミュニティに参加して友達の輪を広げよう！</h5>
+      <%= image_tag("tutorial4.png", class: "w-100") %>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
