色と文字変えたよ

--- a/app/views/pages/tutorial.html.erb
+++ b/app/views/pages/tutorial.html.erb
@@ -1,4 +1,5 @@
-<div id="carouselExampleIndicators" class="carousel carousel-dark slide position-absolute top-50 start-50 translate-middle" data-bs-ride="carousel" data-bs-interval="false">
+<h2 class="label" style="color:deeppink">Amicaへようこそ</h2>
+<div id="carouselExampleIndicators" class="carousel carousel-dark slide position-absolute top-50 start-50 translate-middle mt-3" data-bs-ride="carousel" data-bs-interval="false">
 
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -7,9 +8,8 @@
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
   </div>
   <div class="carousel-inner">
-
     <div class="carousel-item active" style="width: 1300px;">
-      <h5 class="text-center">タグを追加しよう！</h5>
+      <h5 class="text-center">マイページからタグを追加しよう！</h5>
       <%= image_tag("tutorial1.png", class: "w-100") %>
     </div>
     <div class="carousel-item" style="width: 1300px;">
