--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,10 +1,35 @@
 <%= stylesheet_link_tag 'profiles', media: 'all', 'data-turbolinks-track': 'reload' %>
 <%= stylesheet_link_tag 'profiles_show', media: 'all', 'data-turbolinks-track': 'reload' %>
+<style>
+    .send {
+        margin-right: 2px;
+        margin-bottom: 2px;
+        background-color: rgba(255, 255, 255, 0);
+        border: none;
+    }
+</style>
 <div class="main container">
   <div class="row">
     <div class="col-md-12 text-center" style="z-index: 1;">
       <div class="panel panel-default">
         <div class="userprofile social">
+          <div class="d-flex justify-content-between">
+            <div></div>
+            <div style="margin-right: 10px">
+              <% unless current_user == @user %>
+                <% if blocked?(current_user, @user) %>
+                  <%= button_to profile_block_path(@user.id), method: :delete, class: "send", data: { disable_with: '<i class="fas fa-ban" style="color: red;width: 20px;height: 20px"></i>' } do %>
+                    <i class="fas fa-ban" style="color: blue;width: 20px;height: 20px"></i>
+                  <% end %>
+                <% else %>
+                  <%= button_to profile_block_index_path(@user.id), method: :post, class: "send", data: { disable_with: '<i class="fas fa-ban" style="color: blue;width: 20px;height: 20px"></i>' } do %>
+                    <i class="fas fa-ban" style="color: red;width: 20px;height: 20px"></i>
+                  <% end %>
+                <% end %>
+              <% end %>
+            </div>
+          </div>
+
           <div class="userdata">
             <div class="userpic">
               <%= image_tag @user.decorate.image, :size => '100x100', class: "userpicimg icon flex-shrink-0 question-icon" %>
@@ -25,16 +50,18 @@
 
         <div class="col-md-12 border-top border-bottom">
           <ul class="nav nav-pills float-start countlist" role="tablist">
-            <%= link_to profile_follow_path(@user.userid), class:"text-dark" do %>
+            <%= link_to profile_follow_path(@user.userid), class: "text-dark" do %>
               <li role="presentation">
                 <h3><%= @user.followers_list.size %><br>
                   <small>フォロー</small></h3>
               </li>
             <% end %>
-            <%= link_to profile_follower_path(@user.userid), class:"text-dark" do %>
+            <%= link_to profile_follower_path(@user.userid), class: "text-dark" do %>
               <li role="presentation">
-                <h3><%= @user.followings_list.size %><br>
-                  <small>フォロワー</small></h3>
+                <h3>
+                  <%= @user.followings_list.size %><br>
+                  <small>フォロワー</small>
+                </h3>
               </li>
             <% end %>
             <li role="presentation">
@@ -72,79 +99,84 @@
       </div>
     </div>
   </div>
-  <!-- /.col-md-12 -->
-  <div class="row d-flex justify-content-around center-block">
 
-    <div class="col-md-12">
-      <div class="panel panel-default">
-        <div class="panel-heading m-3">
-          <h3 class="page-header">自己紹介</h3>
-          <p class="page-subtitle">
-            <%= @profile.intro %>
-          </p>
+  <% if blocked?(current_user, @user) %>
+    <div class="text-center">
+      <h2>ユーザーをブロックしています</h2>
+    </div>
+  <% else %>
+    <div class="row d-flex justify-content-around center-block">
+      <div class="col-md-12">
+        <div class="panel panel-default">
+          <div class="panel-heading m-3">
+            <h3 class="page-header">自己紹介</h3>
+            <p class="page-subtitle">
+              <%= @profile.intro %>
+            </p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="col-md-12">
-      <div class="panel panel-default">
-        <div class="panel-heading m-3">
-          <h3 class="page-header">バッジ</h3>
-          <%= render 'profiles/badge' %>
+      <div class="col-md-12">
+        <div class="panel panel-default">
+          <div class="panel-heading m-3">
+            <h3 class="page-header">バッジ</h3>
+            <%= render 'profiles/badge' %>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="col-md-12">
-      <div class="panel panel-default">
-        <div class="panel-heading m-3">
-          <h3 class="page-header">取得資格</h3>
-          <p class="page-subtitle">
-            <% @user.accreditation_list.each do |t| %>
-              <%= link_to search_tag_path(t) do %>
-                <span><%= t %> </span>
+      <div class="col-md-12">
+        <div class="panel panel-default">
+          <div class="panel-heading m-3">
+            <h3 class="page-header">取得資格</h3>
+            <p class="page-subtitle">
+              <% @user.accreditation_list.each do |t| %>
+                <%= link_to search_tag_path(t) do %>
+                  <span><%= t %> </span>
+                <% end %>
               <% end %>
-            <% end %>
-            <% if @user.accreditation_list.empty? %>
-              未入力です
-            <% end %>
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-12">
-      <div class="panel panel-default">
-        <div class="panel-heading m-3">
-          <h3 class="page-header">タグ、趣味</h3>
-          <p class="page-subtitle">
-            <% @user.tags.pluck(:name).each do |t| %>
-              <%= link_to search_tag_path(t) do %>
-                <span>#<%= t %></span>
+              <% if @user.accreditation_list.empty? %>
+                未入力です
               <% end %>
-            <% end %>
-            <% if @user.tags.pluck(:name).empty? %>
-              まだタグを入力していないようです！
-            <% end %>
-          </p>
+            </p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="col-md-12">
-      <div class="panel panel-default">
-        <div class="panel-heading m-3">
-          <h3 class="page-header">最近の投稿</h3>
-          <p class="page-subtitle">
-            <% @user.posts.includes(:likes, :comments).order(created_at: :desc).first(10).each do |p| %>
-              <%= render "timelines/post", post: p, report: @report %>
-            <% end %>
-            <% if @user.posts.empty? %>
-              まだ投稿がありません！
-            <% end %>
-          </p>
+      <div class="col-md-12">
+        <div class="panel panel-default">
+          <div class="panel-heading m-3">
+            <h3 class="page-header">タグ、趣味</h3>
+            <p class="page-subtitle">
+              <% @user.tags.pluck(:name).each do |t| %>
+                <%= link_to search_tag_path(t) do %>
+                  <span>#<%= t %></span>
+                <% end %>
+              <% end %>
+              <% if @user.tags.pluck(:name).empty? %>
+                まだタグを入力していないようです！
+              <% end %>
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-12">
+        <div class="panel panel-default">
+          <div class="panel-heading m-3">
+            <h3 class="page-header">最近の投稿</h3>
+            <p class="page-subtitle">
+              <% @user.posts.includes(:likes, :comments).order(created_at: :desc).first(10).each do |p| %>
+                <%= render "timelines/post", post: p, report: @report %>
+              <% end %>
+              <% if @user.posts.empty? %>
+                まだ投稿がありません！
+              <% end %>
+            </p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+  <% end %>
 </div>
