チャット完成+大戦犯回避

--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -100,24 +100,31 @@
       <span class="clear"></span>
       <div class="row ">
         <div class="w-100 d-flex ">
-
-          <label>
-            <button id="file_button" style="display: none" type="button" class="btn btn-primary form-control" data-bs-toggle="modal" data-bs-target="#fileModal"></button>
-            <span class="m-1" style="font-size: 1.4rem;color: #f0c065"><i class="fas fa-upload"></i></span>
-          </label>
-          <input type="hidden" id="room_id" value= <%= @room.id %> data-behavior="chat_speaker">
-          <input type="hidden" id="user_id" value= <%= current_user.id %> data-behavior="chat_speaker">
-          <input type="hidden" id="partner_userid" value= <%= @user.userid %> >
-          <input type="hidden" id="partner_image" value= <%= @user.image %> >
-          <%= text_area_tag  :content, nil, class:"form-control", placeholder:"message", data: {behavior: "chat_speaker"},id:"content" %>
-          <label><!-- Button trigger modal -->
-            <button id="submit_button" style="display: none" type="submit" class="btn btn-primary form-control" ></button>
-            <span class="m-1" style="font-size: 1.6rem;color: #1b8798"><i class="fas fa-paper-plane"></i></span>
-          </label>
-          <label>
-            <button style="display: none" type="button" class="btn btn-primary form-control" data-bs-toggle="modal" data-bs-target="#menuModal"></button>
-            <span class="m-1" style="font-size: 1.6rem;color: #5e5e5e"> <i class="fas fa-th-large"></i></span>
-          </label>
+          <% if !blocked?(current_user, @user) %>
+            <div class="row align-items-end">
+              <div class="col">
+            <span class="" style="text-align: center">ユーザーをブロックしています</span>
+              </div>
+            </div>
+          <% else %>
+            <label>
+              <button id="file_button" style="display: none" type="button" class="btn btn-primary form-control" data-bs-toggle="modal" data-bs-target="#fileModal"></button>
+              <span class="m-1" style="font-size: 1.4rem;color: #f0c065"><i class="fas fa-upload"></i></span>
+            </label>
+            <input type="hidden" id="room_id" value= <%= @room.id %> data-behavior="chat_speaker">
+            <input type="hidden" id="user_id" value= <%= current_user.id %> data-behavior="chat_speaker">
+            <input type="hidden" id="partner_userid" value= <%= @user.userid %> >
+            <input type="hidden" id="partner_image" value= <%= @user.image %> >
+            <%= text_area_tag  :content, nil, class:"form-control", placeholder:"message", data: {behavior: "chat_speaker"},id:"content" %>
+            <label><!-- Button trigger modal -->
+              <button id="submit_button" style="display: none" type="submit" class="btn btn-primary form-control" ></button>
+              <span class="m-1" style="font-size: 1.6rem;color: #1b8798"><i class="fas fa-paper-plane"></i></span>
+            </label>
+            <label>
+              <button style="display: none" type="button" class="btn btn-primary form-control" data-bs-toggle="modal" data-bs-target="#menuModal"></button>
+              <span class="m-1" style="font-size: 1.6rem;color: #5e5e5e"> <i class="fas fa-th-large"></i></span>
+            </label>
+          <% end %>
         </div>
       </div>
     </div>
