--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -187,6 +187,28 @@
         </div>
       <% end %>
 
+      <% unless @profile.instagram_id.nil? || @profile.instagram_id == '' %>
+        <div class="col-md-12">
+          <div class="panel panel-default">
+            <div class="panel-heading m-3">
+              <h3 class="page-header" style="color: #d93078"><i class="fab fa-instagram" style="margin-right: 3px"></i>Instagram</h3>
+              <%= link_to "#{@profile.instagram_id}" , "https://Instagram.com/#{@profile.instagram_id}" %>
+            </div>
+          </div>
+        </div>
+      <% end %>
+
+      <% unless @profile.discord_name.nil? || @profile.discord_name == '' || @profile.discord_tag.nil? || @profile.discord_tag == '' %>
+        <div class="col-md-12">
+          <div class="panel panel-default">
+            <div class="panel-heading m-3">
+              <h3 class="page-header" style="color: #535FEE"><i class="fab fa-discord" style="margin-right: 3px"></i>Discord</h3>
+              <%= "#{@profile.discord_name}##{@profile.discord_tag}" %>
+            </div>
+          </div>
+        </div>
+      <% end %>
+
       <div class="col-md-12">
         <div class="panel panel-default">
           <div class="panel-heading m-3">
