--- a/app/views/communities/new.html.erb
+++ b/app/views/communities/new.html.erb
@@ -10,6 +10,10 @@
             singleField: true,
             availableTags: <%= raw @all_tag_list %>
         });
+        <% if defined?(@image)%>
+          $('.user_image').hide()
+          $('#result-img').show()
+        <% end %>
     });
 </script>
 
@@ -24,13 +28,14 @@
         <div id="user_icon">
           <label>
             <button type="button" class="btn btn-primary" style="display: none;" data-bs-toggle="modal" data-bs-target="#exampleModal"></button>
-            <%= image_tag "default_icon.png", :size => '200x200', class: "user_image", style: "width:200px;height:200px" %>
+            <% image = defined?(@image) ? @image : "default_icon.png" %>
+            <%= image_tag image, :size => '200x200', class: "user_image", style: "width:200px;height:200px" %>
           </label>
         </div>
         <label>
           <button type="button" class="btn btn-primary" style="display: none;" data-bs-toggle="modal" data-bs-target="#exampleModal"></button>
           <canvas id="cropped_canvas" style="display:none;width: 200px;height: 200px;"></canvas>
-          <img src="" id="result-img" style="display:none;width: 200px;height: 200px;">
+          <img src="<%=@image if defined?(@image) %>" id="result-img" style="display:none;width: 200px;height: 200px;">
         </label>
       </div>
     </div>
@@ -72,11 +77,11 @@
             <div class="form_wrapper">
               <div id="image-wrapper">
                 <%= f.file_field :images, id: "trim_img_uploder", value: "assets/default", accept: 'image/jpg,image/jpeg,image/png' %>
-                <%= f.hidden_field :image, id: "image" %>
-                <%= f.hidden_field :image_x, id: "image_x" %>
-                <%= f.hidden_field :image_y, id: "image_y" %>
-                <%= f.hidden_field :image_w, id: "image_w" %>
-                <%= f.hidden_field :image_h, id: "image_h" %>
+                <%= f.hidden_field :image, id: "image", value: defined?(@image) ? @image : nil%>
+                <%= f.hidden_field :image_x, id: "image_x", value: defined?(@image_x) ? @image_x : nil %>
+                <%= f.hidden_field :image_y, id: "image_y", value: defined?(@image_y) ? @image_y : nil %>
+                <%= f.hidden_field :image_w, id: "image_w", value: defined?(@image_w) ? @image_w : nil %>
+                <%= f.hidden_field :image_h, id: "image_h", value: defined?(@image_h) ? @image_h : nil %>
                 <%= f.hidden_field :aspect_numerator, id: "aspect_numerator", value: "1.0" %>
                 <%= f.hidden_field :aspect_denominator, id: "aspect_denominator", value: "1.0" %>'
                 <div id="prev_img">
