著作権表記に年数を追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -154,7 +154,7 @@
   <hr/>
   <div class="p-3">
     <h1 class="mb-0">Amica</h1>
-    <p class="mb-0">©Avails Group. All rights reserved.</p>
+    <p class="mb-0">©2021 - <%= DateTime.now.strftime('%Y') %> Avails Group. All rights reserved.</p>
   </div>
 </footer>
 </body>
