--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -35,7 +35,7 @@
       </main>
 
       <footer class="mt-auto text-dark">
-        <p>©Avails Group
+        <p>©2021 - <%= DateTime.now.strftime('%Y') %> Avails Group
         <%= link_to("利用規約",static_path,class:"text-dark") %>
         <%= link_to("プライバシーポリシー",privacy_path,class:"text-dark")%></p>
       </footer>
